--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./lodash.min.js"></script>
     <script src="./scripts.js"></script>
     <link rel="stylesheet" href="./style.css">
     <meta charset="utf-8">
